code fix and update
updated ships, remaining just to resolve attacks. Fixed issue with clicking the grid.